# ra-pdf-shrink

./: Cargo.toml
.github/workflows/: deploy.yml
frontend/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: useWorkerPool.ts
frontend/src/workers/: pdf-worker.ts
src/: lib.rs  main.rs
src/pdf_utils/: extract.rs  mod.rs
