[package]
name = "ra-pdf"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
lopdf = { version = "0.38.0", features = ["wasm_js"], default-features = false }
regex = "1.12.2"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["console"] }

[profile.release]
lto = true
